Add simplified git package from v1
Add git package and some third party dependencies which might be useful later.

Co-authored-by: Harsh Shandilya <me@msfjarvis.dev>
Co-authored-by: Fabian Henneke <fabian@henneke.me>

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -118,6 +118,7 @@ dependencies {
   }
   implementation deps.androidx.room
   implementation deps.androidx.room_ktx
+  implementation deps.androidx.security
 
   implementation deps.third_party.dagger
   implementation deps.third_party.sshj
